# genai-fastapi-project

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: main_genai-fastapi-app-2026.yml  main_genai-fastapi-backend.yml
app/: database.py  main.py
app/config/: settings.py
app/models/: chat_models.py
app/routes/: agent.py  rag.py
app/services/: agent_service.py  calculator_service.py  document_loader.py  embeddings_service.py  llm_service.py  rag_service.py  vector_store_service.py
frontend/src/: App.jsx
